# svcLibs

./: Dockerfile-python  README.md  pyproject.toml  roles.json
.github/workflows/: deploy-python.yml
docs/: docs.md  svc-auth.md  svc-dox.md  svc-users.md  svc-whitelist.md  стек-технологий.md
python/: requirements.txt  responses.py
python/svcLibc/: codes.py  middleware.py
python/svcLibs/: db.py  middleware.py  requirements.txt
