[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "svcLibs"
version = "0.1.0"
description = "Кастомный Middleware и коды ответов для FastAPI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi~=0.137.0",
    "uvicorn~=0.49.0",
    "psycopg2-binary~=2.9.12"
    "SQLAlchemy~=2.0.50"
]

[tool.setuptools]
package-dir = {"" = "python"}

[tool.setuptools.packages.find]
where = ["python"]
